# linux-stu

./: Makefile  README.md  aa  chart1-1.c  chart1-2.c  chart3-19  chart3-19.c  copyio  copyio.c  copystdinput  copystdinput.c  define.c  distype  distype.c  errno  errno.c  execcmd  execcmd.c  file.list2  foo.out  foo2.out  fork  fork.c  fork1.c  getpid  getpid.c  getuid  getuid.c  gid  gid.c  heloubuntu.c  listfile  listfile.c  mo  modifyselfname.c  multiThread.c  multithread  openfile  openfile.c  pu.h  (+12 more)
1chapter/: 1_5.c  a.out
atexit/: a.out  atexit.c  atexit.c~  b.out
buserror/: buserr  buserr.c
c++11/: a.out  first  first.cpp  query  query.cpp  vector  vector.cpp
cmake/1st/: CMakeLists.txt  TutorialConfig.h.in
cmake/2rd/2RD/: CMakeLists.txt  (+2 more)
dup/: a.out  fcntl_test.c  fcntl_test.c~
gdb/: a.out  callstack.c  ko.c  main  stack  stack.c
kernel/: .hello.ko.cmd  .hello.mod.o.cmd  .hello.o.cmd  Makefile  Makefile-b  Makefile~  hello.c  hello.ko  hello.mod.c  modules.order
kernel/.tmp_versions/: hello.mod
multi-pointer/: mp  multi_pointertest.c~
multifile/: makefile  test  test.c  test.c~  test.h~  test1.c  test1.c~  test2.c~
multithread/: mthread  multiThread.c
opengl/: sample.cpp  test
pointertest/: pointertest  pointertest.c
readaline/: readline  readline.cpp
setlongjmp/: a.out  setlongjmp.c~  setlongjmp~
testallfile/: hell  hell.c  hell.i  hell.s  hello.c  libhello.so.0.0.0  main  main.c  nuusers
testenv/: a.out  testenv.c  testenv.c~
thread_pool/: .thread_pool.c.kate-swp  a.out  main.c  thread_pool.c~  thread_pool.h.gch  thread_pool.h~
(+9 files in other folders)
